wam: Fix add-on description tooltip's text alignment

--- a/data/tools/addon_manager/style.css
+++ b/data/tools/addon_manager/style.css
@@ -52,6 +52,7 @@ div.desc-tooltip pre {
     margin: 0;
 	padding: 0;
     max-height: none;
+	text-align: left;
 }
 
 table.tablesorter {
